// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-AxheI cOhUdO"
>
  <li
    className="sc-Axmtr gYrhaC"
    onClick={[Function]}
  >
    <span
      className="sc-fzqyvX kTtMtC"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-Axmtr gYrhaC"
    onClick={[Function]}
  >
    <span
      className="sc-fzqyvX kTtMtC"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-Axmtr gYrhaC"
    onClick={[Function]}
  >
    <span
      className="sc-fzqyvX kTtMtC"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-AxheI cOhUdO"
>
  <li
    className="sc-Axmtr krCCPu"
    onClick={[Function]}
  >
    <span
      className="sc-fzqyvX kTtMtC"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-Axmtr krCCPu"
    onClick={[Function]}
  >
    <span
      className="sc-fzqyvX kTtMtC"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-Axmtr krCCPu"
    onClick={[Function]}
  >
    <span
      className="sc-fzqyvX kTtMtC"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
